# something-goood

backend/: .gitignore  Cargo.toml
backend/src/: main.rs
backend/src/auth/: client.rs  route.rs
backend/src/entity/: mod.rs  prelude.rs  syndicate.rs  user.rs
backend/src/models/: user.rs
backend/src/routes/: user.rs
backend/supabase/migrations/: 20250801193122_create_employees_table.sql
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/echo/: page.tsx
frontend/app/glance/: page.tsx
frontend/app/persona/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: Navbar.tsx
