[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio-rustls", "uuid"] }
env_logger = "0.11.8"
log = "0.4.27"

